--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p><a href="https://github.com/patrsc/pydatomic" target="_blank">GitHub Repository</a></p>
         <p><a href="https://pypi.org/project/pydatomic" target="_blank">PyPI Package</a></p>
         <h2>Documentation</h2>
+        <p><a href="doc/0.1.4/index.html">pydatomic 0.1.4</a></p>
         <p><a href="doc/0.1.3/index.html">pydatomic 0.1.3</a></p>
         <p><a href="doc/0.1.2/index.html">pydatomic 0.1.2</a></p>
         <p><a href="doc/0.1.1/index.html">pydatomic 0.1.1</a></p>
